infrastructure/local/minio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - storage.cloud.dhd.intranet
  rules:
    - matches:
        - headers:
            - name: "Host"
              value: "storage.cloud.dhd.intranet:9090"
      backendRefs:
        - name: minio-console
          namespace: minio
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-storage
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - storage.cloud.dhd.intranet
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio
          namespace: minio
          port: 9000
